@@ -43,6 +43,7 @@ export(sjt.mwu)
 export(sjt.pca)
 export(sjt.stackfrq)
 export(sjt.xtab)
+export(view_df)
 export(view_spss)
 import(dplyr)
 import(ggplot2)
