@@ -1,10 +1,17 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/sjTabSPSS.R
 \name{view_spss}
+\alias{view_df}
 \alias{view_spss}
-\title{View SPSS (and SAS/Stata) data set structure}
+\title{View structure of labelled data frames}
 \usage{
 view_spss(df, file = NULL, alternateRowColors = TRUE, showID = TRUE,
+  showType = FALSE, showValues = TRUE, showValueLabels = TRUE,
+  showFreq = FALSE, showPerc = FALSE, sortByName = FALSE,
+  breakVariableNamesAt = 50, encoding = NULL, hideProgressBar = FALSE,
+  CSS = NULL, useViewer = TRUE, no.output = FALSE, remove.spaces = TRUE)
+
+view_df(df, file = NULL, alternateRowColors = TRUE, showID = TRUE,
   showType = FALSE, showValues = TRUE, showValueLabels = TRUE,
   showFreq = FALSE, showPerc = FALSE, sortByName = FALSE,
   breakVariableNamesAt = 50, encoding = NULL, hideProgressBar = FALSE,
@@ -12,7 +19,9 @@ view_spss(df, file = NULL, alternateRowColors = TRUE, showID = TRUE,
 }
 \arguments{
 \item{df}{An imported data frame, imported by \code{\link[sjmisc]{read_spss}},
-\code{\link[sjmisc]{read_sas}} or \code{\link[sjmisc]{read_stata}} function.}
+\code{\link[sjmisc]{read_sas}} or \code{\link[sjmisc]{read_stata}} function,
+or any similar labelled data frame (see \code{\link[sjmisc]{set_var_labels}}
+and \code{\link[sjmisc]{set_val_labels}}).}
 
 \item{file}{The destination file, which will be in html-format. If no filepath is specified,
 the file will be saved as temporary file and openend either in the IDE's viewer pane or
@@ -76,7 +85,8 @@ Invisibly returns
            for further use.
 }
 \description{
-Save (or show) content of an imported SPSS, SAS or Stata data file as HTML table.
+Save (or show) content of an imported SPSS, SAS or Stata data file,
+               or any similar labelled \code{data.frame}, as HTML table.
                Similar to the SPSS variable view. This quick overview shows
                variable ID numner, name, label, type and associated
                value labels. The result can be considered as "codeplan" of
@@ -95,19 +105,19 @@ library(sjmisc)
 data(efc)
 
 # view variables
-view_spss(efc)
+view_df(efc)
 
 # view variables w/o values and value labels
-view_spss(efc, showValues = FALSE, showValueLabels = FALSE)
+view_df(efc, showValues = FALSE, showValueLabels = FALSE)
 
 # view variables including variable typed, orderd by name
-view_spss(efc, sortByName = TRUE, showType = TRUE)
+view_df(efc, sortByName = TRUE, showType = TRUE)
 
 # ----------------------------------------------------------------
 # User defined style sheet
 # ----------------------------------------------------------------
-view_spss(efc,
-          CSS=list(css.table = "border: 2px solid;",
+view_df(efc,
+        CSS = list(css.table = "border: 2px solid;",
                    css.tdata = "border: 1px solid;",
                    css.arc = "color:blue;"))}
 }
